--- a/TravelSite/TravelSite/Views/Home/Help.cshtml
+++ b/TravelSite/TravelSite/Views/Home/Help.cshtml
@@ -1,14 +1,8 @@
 ﻿@using TravelSite.Data.Models
 @using Microsoft.AspNetCore.Identity;
 @using TravelSite.Models.Account
-@inject SignInManager<User> SignInManager
-@inject UserManager<User> UserManager;
 
-@model HomeViewModel;
 @{
-	ViewData["Title"] = "Help Page";
-	Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "Help";
 }
-<script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="css/bootstrap.css">
-<link rel="stylesheet" href="css/site.css">
+<label>HEEEELLLLLPPPPPP</label>
