--- a/TravelSite/TravelSite/Views/TravelDates/EditTravelDates.cshtml
+++ b/TravelSite/TravelSite/Views/TravelDates/EditTravelDates.cshtml
@@ -4,8 +4,9 @@
 }
 @model EditTravelDatesViewModel
 
-<script src="~/lib/moment/moment-with-locales.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="css/bootstrap.css">
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
