--- a/TravelSite/TravelSite/Views/Account/EditUser.cshtml
+++ b/TravelSite/TravelSite/Views/Account/EditUser.cshtml
@@ -10,11 +10,11 @@
 <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css">
 
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="css/bootstrap.css">
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-<script src="~/lib/moment/moment-with-locales.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap-datetimepicker.min.js"></script>
 
 
 
