--- a/TravelSite/TravelSite/Views/Booking/BookingList.cshtml
+++ b/TravelSite/TravelSite/Views/Booking/BookingList.cshtml
@@ -7,32 +7,34 @@
 }
 @model List<BookingViewModel>
 
-
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/bootstrap.css">
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 @if (Model.Count != 0)
 {
 	@if (User.IsInRole("Admin"))
 	{
 		<div class="mb-5">
-			<label class="fw-bold fs-5">Все бронирования</label>
-			@foreach (var booking in Model)
+			@foreach (var group in Model.GroupBy(c => c.User?.Email).ToList())
 			{
-				<div class="card mb-1">
-					<a class="text-decoration-none" method=get asp-area="" asp-controller="Booking" asp-route-id="@booking.Id" asp-action="GetBooking">
-						<span class="badge bg-warning text-light mb-1">@booking.BookingNumber</span>
-					</a>
-					<div style="color:darkgray; align-content:start">@booking.User?.UserName</div>
-					<div style="color:darkgray; align-content:start">@booking.Travel?.Name</div>
-					<div style="color:darkgray; align-content:start">@booking.BookDate</div>
-					<div style="color:darkgray; align-content:start">@booking.BookingStatus</div>
-					<div style="color:darkgray; align-content:start">@booking.From</div>
-					<div style="color:darkgray; align-content:start">@booking.To</div>
+				<div class="card mb-1 w-75 m-auto">
+					<label class="fw-bold fs-6">Бронирования @group.Key</label>
+					@foreach (var booking in group)
+					{
+						<div class="mb-1">
+							<a class="text-decoration-none" method=get asp-area="" asp-controller="Booking" asp-route-id="@booking.Id" asp-action="GetBooking">
+								<span class="badge bg-warning text-light mb-1">@booking.BookingNumber</span>
+							</a>
+							<div style="color:darkgray; align-content:start">@booking.User?.UserName</div>
+							<div style="color:darkgray; align-content:start">@booking.Travel?.Name</div>
+							<div style="color:darkgray; align-content:start">@booking.BookDate</div>
+							<div style="color:darkgray; align-content:start">@booking.BookingStatus</div>
+							<div style="color:darkgray; align-content:start">@booking.From</div>
+							<div style="color:darkgray; align-content:start">@booking.To</div>
+						</div>
+					}
 				</div>
-				<a class="" method=get asp-area="" asp-controller="Booking" asp-route-id="@booking.Id" asp-action="EditBooking">Редактировать</a>
 			}
 		</div>
 	}
