--- a/TravelSite/TravelSite/Views/Home/Help.cshtml
+++ b/TravelSite/TravelSite/Views/Home/Help.cshtml
@@ -5,4 +5,9 @@
 @{
 	ViewData["Title"] = "Help";
 }
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="css/bootstrap.css">
+
 <label>HEEEELLLLLPPPPPP</label>
