--- a/TravelSite/TravelSite/Views/Account/AdminSettings.cshtml
+++ b/TravelSite/TravelSite/Views/Account/AdminSettings.cshtml
@@ -9,15 +9,22 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/bootstrap.css">
 <label class="mb-1">Настройки</label>
+
 <div class="mb-1">
 	<form class="frm" method="post" asp-controller="Account" asp-action="AddRefs">
 		<div asp-validation-summary="ModelOnly"></div>
 		<div class="mb-1 card w-75">
 			<div class="card-body">
 				<div class="mb-1 w-75">
+					<label>
+						Ссылка на telegram
+					</label>
 					<input asp-for="Url1" class="form-control w-50"></input>
 				</div>
 				<div class="mb-1 w-75">
+					<label>
+						Ссылка на whatsup
+					</label>
 					<input asp-for="Url2" class="form-control w-50"></input>
 				</div>
 			</div>
