--- a/TravelSite/TravelSite/Views/Account/UserList.cshtml
+++ b/TravelSite/TravelSite/Views/Account/UserList.cshtml
@@ -4,6 +4,10 @@
 }
 @model List<UserViewModel>
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="css/bootstrap.css">
+
 @if (Model.Count != 0)
 {
 	<div class="mb-5">
