--- a/TravelSite/TravelSite/Views/Order/AddOrder.cshtml
+++ b/TravelSite/TravelSite/Views/Order/AddOrder.cshtml
@@ -24,8 +24,8 @@
 		<div class="mb-3">
 			<label class="fs-5 mb-1 fw-bolder">Стоимость: @Model.TotalPrice</label>
 		</div>
-		<div>
+@* 		<div>
 			<input class="btn btn-success" type="submit" value="Оплатить" />
-		</div>
+		</div> *@
 	</div>
 </form>
