--- a/TravelSite/TravelSite/Views/Travel/AddTravel.cshtml
+++ b/TravelSite/TravelSite/Views/Travel/AddTravel.cshtml
@@ -26,23 +26,26 @@
 	</div>
 	<div>
 		<div class="mb-3">
-			<input asp-for="Description" class="form-control" />
+			<textarea asp-for="Description" class="form-control"></textarea>
 			<span asp-validation-for="Description" class="text-danger"></span>
 		</div>
 	</div>
 	<div>
+		<label class="fw-8">Добавить основное изображение</label>
 		<div class="mb-3">
 			<input asp-for="Photo" type="file" class="form-control" />
 			<span asp-validation-for="Photo" class="text-danger"></span>
 		</div>
 	</div>
 	<div>
+		<label class="fw-8">Добавить несколько фото</label>
 		<div class="mb-3">
 			<input asp-for="PhotoGallery" type="file" multiple class="form-control" data-val="true" />
 			<span asp-validation-for="PhotoGallery" class="text-danger"></span>
 		</div>
 	</div>
 	<div>
+		<label class="fw-8">Добавить видео</label>
 		<div class="mb-3">
 			<input asp-for="VideoList" type="file" multiple class="form-control" data-val="true" />
 			<span asp-validation-for="VideoList" class="text-danger"></span>
