--- a/TravelSite/TravelSite/Views/Travel/TravelList.cshtml
+++ b/TravelSite/TravelSite/Views/Travel/TravelList.cshtml
@@ -10,7 +10,6 @@
 @if (Model.Count != 0)
 {
 	<div class="mb-5 w-75 m-auto">
-		<label class="fw-bold fs-5">Все туры</label>
 		@if (User.IsInRole("Admin"))
 		{
 			<div>
@@ -20,10 +19,7 @@
 		@foreach (var travel in Model)
 		{
 			<div class="mb-1">
-				<a class="text-decoration-none" method=get asp-area="" asp-controller="Travel" asp-route-id="@travel.Id" asp-action="GetTravel">
-					<span class="badge bg-warning text-light mb-1">@travel.Name</span>
-				</a>
-				<div style="color:darkgray; align-content:start">@travel.Description</div>
+				<label class="fw-bolder justify-content-center">@travel.Name</label>
 				<a class="text-decoration-none;color:darkgray; align-content:start" method=get asp-area="" asp-controller="Travel" asp-route-id="@travel.Id" asp-action="GetTravel">
 					<img style="align-content:center; border-radius:5px" src="@travel.Photo" width="100%" height="50%" />
 				</a>
