--- a/TravelSite/TravelSite/Views/TravelDates/EditTravelDates.cshtml
+++ b/TravelSite/TravelSite/Views/TravelDates/EditTravelDates.cshtml
@@ -42,12 +42,12 @@
 		</div>
 		<div class="mb-3">
 			<label class="text-dark-emphasis">Дата отправления</label>
-			<input asp-for="From" class="form-control" style="max-width:fit-content" type="date" />
+			<input asp-for="From" class="form-control" style="max-width:fit-content" type="date" value="@DateTime.UtcNow.Date.ToString("yyyy-MM-dd")" />
 			<span asp-validation-for="From" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label class="text-dark-emphasis">Дата возвращения</label>
-			<input asp-for="To" class="form-control" style="max-width:fit-content" type="date" />
+			<input asp-for="To" class="form-control" style="max-width:fit-content" type="date" value="@DateTime.UtcNow.Date.ToString("yyyy-MM-dd")" />
 			<span asp-validation-for="To" class="text-danger"></span>
 		</div>
 	</div>
